new design start modify

--- a/about.html
+++ b/about.html
@@ -45,6 +45,10 @@
                             <!-- start work schedule -->
                             <div class="headerinfo__schedule">
                                 <button type="button" class="headerinfo__schedule-button">График работы</button>
+                                <div class="headerinfo__schedule-info">
+                                    <span class="headerinfo__schedule-working">пн-вс: 09:00-20:00</span>
+                                    <span class="headerinfo__schedule-lunch">обед 14:00-14:30</span>
+                                </div>
                             </div>
                             <!-- end work schedule -->
                         </address>
@@ -61,6 +65,44 @@
                 <div class="container container--maincontent">
                     <!-- start sidebar -->
                     <aside class="aside">
+
+                        <section class="tariffs">
+                            <!-- start tariffs elements -->
+                            <ul class="tariffs__list">
+                                <li class="tariffs__item">
+                                    <!-- start 1 element -->
+                                    <h2 class="title-h title-h--tariffs">
+                                        топ-тариф
+                                    </h2>
+                                    <h3 class="tariffs__item-name">
+                                        СТАНДАРТ
+                                    </h3>
+                                    <div class="tariffs__item-description">
+                                        Создан для вашего комфортного отдыха
+                                    </div>
+                                    <ul class="tariffs__item-list">
+                                        <li class="tariffs__item-list-elem">
+                                            Питание включено
+                                        </li>
+                                        <li class="tariffs__item-list-elem">
+                                            Багаж (5 кг)
+                                        </li>
+                                        <li class="tariffs__item-list-elem">
+                                            Детское кресло
+                                        </li>
+                                    </ul>
+                                    <div class="tariffs__item-price">
+                                        <span class="dollar">$</span>19
+                                    </div>
+                                    <!-- end 1 element -->
+                                </li>
+                            </ul>
+                            <!-- end tariffs elements -->
+                        </section>
+                    </aside>
+                    <!-- end sidebar -->
+                    <!-- start main -->
+                    <main class="main">
                         <nav class="navigation">
                             <!-- start navigation -->
                             <ul class="navigation__list">
@@ -85,102 +127,10 @@
                             </ul>
                             <!-- end navigation -->
                         </nav>
-                    </aside>
-                    <!-- end sidebar -->
-                    <!-- start main -->
-                    <main class="main">
                         <div class="big-photo">
                             <img src="img/tariffs-icon/photo.png" alt="airplanet" class="big-photo__img">
                         </div>
-                        <!-- start tariffs -->
-                        <section class="tariffs">
-                            <!-- start tariffs text -->
-                            <h2 class="title-h">
-                                Тарифы
-                            </h2>
-                            <!-- end tariffs text -->
-                            <!-- start tariffs elements -->
-                            <ul class="tariffs__list">
-                                <li class="tariffs__item">
-                                    <!-- start 1 element -->
-                                    <div class="tariffs__item-icon tariffs__item-icon--standart"></div>
-                                    <h3 class="tariffs__item-name">
-                                        СТАНДАРТ
-                                    </h3>
-                                    <div class="tariffs__item-description">
-                                        Создан для вашего комфортного отдыха
-                                    </div>
-                                    <ul class="tariffs__item-list">
-                                        <li class="tariffs__item-list-elem">
-                                            Питание включено
-                                        </li>
-                                        <li class="tariffs__item-list-elem">
-                                            Багаж (5 кг)
-                                        </li>
-                                        <li class="tariffs__item-list-elem">
-                                            Детское кресло
-                                        </li>
-                                    </ul>
-                                    <div class="tariffs__item-price">
-                                        <span class="dollar">$</span>19
-                                    </div>
-                                    <!-- end 1 element -->
-                                </li>
-                                <li class="tariffs__item">
-                                    <!-- start 2 element -->
-                                    <div class="tariffs__item-icon tariffs__item-icon--premium"></div>
-                                    <h3 class="tariffs__item-name">
-                                        ПРЕМИУМ
-                                    </h3>
-                                    <div class="tariffs__item-description">
-                                        Для любителей <br> хороших впечатлений
-                                    </div>
-                                    <ul class="tariffs__item-list">
-                                        <li class="tariffs__item-list-elem">
-                                            Питание включено
-                                        </li>
-                                        <li class="tariffs__item-list-elem">
-                                            Багаж (5 кг)
-                                        </li>
-                                        <li class="tariffs__item-list-elem">
-                                            Детское кресло
-                                        </li>
-                                    </ul>
-                                    <div class="tariffs__item-price">
-                                        <span class="dollar">$</span>39
-                                    </div>
-                                    <!-- end 2 element -->
-                                </li>
-                                <li class="tariffs__item">
-                                    <!-- start 3 element -->
-                                    <div class="tariffs__item-icon tariffs__item-icon--laksheri"></div>
-                                    <h3 class="tariffs__item-name">
-                                        ЛАКШЕРИ
-                                    </h3>
-                                    <div class="tariffs__item-description">
-                                        Всё самое лучшее и незабываемое
-                                    </div>
-                                    <ul class="tariffs__item-list">
-                                        <li class="tariffs__item-list-elem">
-                                            Питание включено
-                                        </li>
-                                        <li class="tariffs__item-list-elem">
-                                            Багаж (5 кг)
-                                        </li>
-                                        <li class="tariffs__item-list-elem">
-                                            Детское кресло
-                                        </li>
-                                    </ul>
-                                    <div class="tariffs__item-price">
-                                        <span class="dollar">$</span>99
-                                    </div>
-                                    <!-- end 3 element -->
-                                </li>
-                            </ul>
 
-                            <!-- end tariffs elements -->
-                        </section>
-                        <!-- end tariffs -->
                         <section class="news">
                             <!-- start news text -->
                             <h2 class="title-h title-h--news">
