--- a/team.html
+++ b/team.html
@@ -47,7 +47,12 @@
                             <!-- start work schedule -->
                             <div class="headerinfo__schedule">
                                 <button type="button" class="headerinfo__schedule-button">График работы</button>
+                                <div class="headerinfo__schedule-info">
+                                    <span class="headerinfo__schedule-working">пн-вс: 09:00-20:00</span>
+                                    <span class="headerinfo__schedule-lunch">обед 14:00-14:30</span>
+                                </div>
                             </div>
+                            <!-- end
                             <!-- end work schedule -->
                         </address>
                         <!-- end header info -->
