add social block in aside (about.html)

--- a/about.html
+++ b/about.html
@@ -99,6 +99,43 @@
                             </ul>
                             <!-- end tariffs elements -->
                         </section>
+
+                        <!-- start social  -->
+                        <div class="social">
+                            <!-- start social text -->
+                            <div class="social__text">
+                                Наши социальные сети
+                            </div>
+                            <!-- end social text -->
+                            <ul class="social__list">
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <i class="sprite sprite-vk"></i>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <i class="sprite sprite-fb"></i>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <i class="sprite sprite-google"></i>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <i class="sprite sprite-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="mailto:example@mail.ru" class="social__link">
+                                        <i class="sprite sprite-mail"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- end social  -->
                     </aside>
                     <!-- end sidebar -->
                     <!-- start main -->
