delete index--container (index.gtml, index.css)

--- a/comments.html
+++ b/comments.html
@@ -52,7 +52,6 @@
                                     <span class="headerinfo__schedule-lunch">обед 14:00-14:30</span>
                                 </div>
                             </div>
-                            <!-- end
                             <!-- end work schedule -->
                         </address>
                         <!-- end header info -->
@@ -301,8 +300,16 @@
                             <div class="new-comment__form-column-bottom-left">
                                 Отображать фото в отзыве?
                                 <br>
-                                <label><input type="radio" name="1" class="new-comment__button-label"> Да</label>
-                                <label><input type="radio" name="1" class="new-comment__button-label"> Нет</label>
+                                <label>
+                                    <input class="radio" type="radio" name="radio-test" checked>
+                                    <span class="radio-custom"></span>
+                                    <span class="label">Да</span>
+                                </label>
+                                <label>
+                                    <input class="radio" type="radio" name="radio-test">
+                                    <span class="radio-custom"></span>
+                                    <span class="label">Нет</span>
+                                </label>
                             </div>
                             <div class="new-comment__form-column-bottom-right">
                                 <button type="submit" class="new-comment__form-button">
