--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
         <!-- start container -->
         <div class="in-block">
             <img src="img/logotypes/logo_intro.png" alt="перейти на сайт" class="logo-intro">
-            <form action="about.html">
-                <button type="submit" class="form-button">
-                    <span class="form-button-text">
-                        перейти на сайт
-                    </span>
-                    <span class="form-button-icon">
-                    </span>
-                </button>
-            </form>
+            <a href="about.html" class="form-button">
+                <span class="form-button-text">
+                    перейти на сайт
+                </span>
+                <span class="form-button-icon">
+                </span>
+            </a>
         </div>
         <!-- end container -->
     </div>
