--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                             <ul class="social__list">
                                 <li class="social__item">
                                     <a href="#" class="social__link">
-                                        <i class="sprite sprite-vk"></i>
+                                        <div class="sprite sprite-vk"></div>
                                     </a>
                                 </li>
                                 <li class="social__item">
