--- a/comments.html
+++ b/comments.html
@@ -70,21 +70,21 @@
                         <nav class="navigation">
                             <!-- start navigation -->
                             <ul class="navigation__list">
-                                <li class="navigation__item">
+                                <li class="navigation__item navigation__item--active">
                                     <a href="about.html" class="navigation__link">
-                                        <div class="navigation__icon navigation__icon--main"></div>
+                                        <div class="sprite sprite-main_icon"></div>
                                         <div class="navigation__text">главная</div>
                                     </a>
                                 </li>
-                                <li class="navigation__item navigation__item--active">
+                                <li class="navigation__item">
                                     <a href="comments.html" class="navigation__link">
-                                        <div class="navigation__icon navigation__icon--comments"></div>
+                                        <div class="sprite sprite-feed_icon"></div>
                                         <div class="navigation__text">отзывы</div>
                                     </a>
                                 </li>
                                 <li class="navigation__item">
                                     <a href="team.html" class="navigation__link">
-                                        <div class="navigation__icon navigation__icon--crew"></div>
+                                        <div class="sprite sprite-team_icon"></div>
                                         <div class="navigation__text">экипаж</div>
                                     </a>
                                 </li>
