modify info block (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -67,6 +67,58 @@
                 <div class="container container--maincontent">
                     <!-- start sidebar -->
                     <aside class="aside">
+                        <!-- start info -->
+                        <section class="info">
+                            <div class="info__block">
+                                Вопросы по бронированию белетов в нашей авиакомпании принимаются. Для этого можно
+                                оставить <a href="#" title="заявка" class="info__link">заявку на сайте</a> или же
+                                позвонить по
+                                номеру
+                                круглосуточной поддержки <span class="bold">8(800) 00-392-10</span>.
+                            </div>
+                        </section>
+                        <!-- end info -->
+
+                        <!-- start social  -->
+                        <div class="social">
+                            <!-- start social text -->
+                            <div class="social__text">
+                                Наши социальные сети
+                            </div>
+                            <!-- end social text -->
+                            <ul class="social__list">
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-vk"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-fb"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-google"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-twitter"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="mailto:example@mail.ru" class="social__link">
+                                        <div class="sprite sprite-mail"></div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- end social  -->
+                    </aside>
+                    <!-- end sidebar -->
+                    <!-- start main -->
+                    <main class="main">
                         <nav class="navigation">
                             <!-- start navigation -->
                             <ul class="navigation__list">
@@ -91,11 +143,6 @@
                             </ul>
                             <!-- end navigation -->
                         </nav>
-                    </aside>
-                    <!-- end sidebar -->
-                    <!-- start main -->
-                    <main class="main">
-
                         <!-- start comments -->
                         <h2 class="title-h">
                             Отзывы
@@ -246,15 +293,6 @@
                     <!-- end maincontent__main -->
                 </div>
                 <!-- end container -->
-                <!-- start info -->
-                <div class="info">
-                    <div class="container container--info">
-                        Вопросы по бронированию белетов в нашей авиакомпании принимаются. Для этого можно оставить
-                        <a href="#" title="заявка" class="info__link">заявку на сайте</a> или же позвонить по номеру
-                        круглосуточной поддержки <span class="bold">8 (800) 00-392-10</span>.
-                    </div>
-                </div>
-                <!-- end info -->
             </div>
             <!-- end maincontent -->
             <!-- start new comment -->
@@ -324,51 +362,12 @@
                     Автор работы: <a href="#" class="footer__left-link"><span class="bold">Глушенков Антон</span></a>
                 </div>
                 <!-- end signature -->
-                <!-- start logo -->
-                <div class="logo footer__logo">
-                    <a href="about.html" title="тарифы компании" class="logo__link">
-                        <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
-                    </a>
-                </div>
-                <!-- end logo -->
-                <!-- start social network -->
                 <div class="footer__right">
-                    <!-- start social text -->
-                    <div class="footer__right-text">
-                        Наши социальные сети
+                    <!-- start logo -->
+                    <div class="logo footer__logo">
+                        <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
                     </div>
-                    <!-- end social text -->
-                    <!-- start social  -->
-                    <div class="social">
-                        <ul class="social__list">
-                            <li class="social__item">
-                                <a href="#" class="social__link">
-                                    <div class="social__icon social__icon--vk"></div>
-                                </a>
-                            </li>
-                            <li class="social__item">
-                                <a href="#" class="social__link">
-                                    <div class="social__icon social__icon--fb"></div>
-                                </a>
-                            </li>
-                            <li class="social__item">
-                                <a href="#" class="social__link">
-                                    <div class="social__icon social__icon--google"></div>
-                                </a>
-                            </li>
-                            <li class="social__item">
-                                <a href="#" class="social__link">
-                                    <div class="social__icon social__icon--twitter"></div>
-                                </a>
-                            </li>
-                            <li class="social__item">
-                                <a href="mailto:example@mail.ru" class="social__link">
-                                    <div class="social__icon social__icon--mail"></div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- end social  -->
+                    <!-- end logo -->
                 </div>
                 <!-- end container -->
             </div>
