modify new comment block

--- a/comments.html
+++ b/comments.html
@@ -144,7 +144,7 @@
                             <!-- end navigation -->
                         </nav>
                         <!-- start comments -->
-                        <h2 class="title-h">
+                        <h2 class="title-h title-h--comments">
                             Отзывы
                         </h2>
                         <!-- start comments elements -->
