modify partners block (team.html)

--- a/team.html
+++ b/team.html
@@ -68,7 +68,84 @@
                 <div class="container container--maincontent">
                     <!-- start sidebar -->
                     <aside class="aside">
+                        <!-- start partners -->
+                        <section class="partners">
+                            <h2 class="title-h title-h--partners">
+                                Партнёры
+                            </h2>
+                            <!-- start line 1 -->
+                            <ul class="partners__list">
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/sibirian.png" alt="партнер Сибирские Авиалинии" class="partners__img partners__img--sibirian">
+                                    </a>
+                                </li>
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/ural.png" alt="партнер Урал" class="partners__img partners__img--ural">
+                                    </a>
+                                </li>
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/bmp.png" alt="партнер BMP Company" class="partners__img partners__img--bmp">
+                                    </a>
+                                </li>
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/oneair.png" alt="партнер One Air" class="partners__img partners__img--oneair">
+                                    </a>
+                                </li>
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/tetra.png" alt="партнер Tetra Install" class="partners__img partners__img--tetra">
+                                    </a>
+                                </li>
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/bingair.png" alt="партнер Bing Air" class="partners__img partners__img--bingair">
+                                    </a>
+                                </li>
 
+                            </ul>
+                            <!-- end line 2 -->
+                        </section>
+                        <!-- end partners -->
+                        <!-- start social  -->
+                        <div class="social social--team">
+                            <!-- start social text -->
+                            <div class="social__text">
+                                Наши социальные сети
+                            </div>
+                            <!-- end social text -->
+                            <ul class="social__list">
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-vk"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-fb"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-google"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <div class="sprite sprite-twitter"></div>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="mailto:example@mail.ru" class="social__link">
+                                        <div class="sprite sprite-mail"></div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- end social  -->
                     </aside>
                     <!-- end sidebar -->
                     <!-- start main -->
@@ -249,51 +326,6 @@
                             </ul>
                         </section>
                         <!-- end team -->
-                        <!-- start partners -->
-                        <section class="partners">
-                            <h2 class="title-h">
-                                Партнеры
-                            </h2>
-                            <!-- start line 1 -->
-                            <ul class="partners__list">
-                                <li class="partners__item">
-                                    <a href="#" class="partners__link">
-                                        <img src="img/logotypes/bmp.png" alt="партнер BMP Company" class="partners__img">
-                                    </a>
-                                </li>
-                                <li class="partners__item">
-                                    <a href="#" class="partners__link">
-                                        <img src="img/logotypes/tetra.png" alt="партнер Tetra Install" class="partners__img">
-                                    </a>
-                                </li>
-                                <li class="partners__item">
-                                    <a href="#" class="partners__link">
-                                        <img src="img/logotypes/sibirian.png" alt="партнер Сибирские Авиалинии" class="partners__img">
-                                    </a>
-                                </li>
-                            </ul>
-                            <!-- end line 1 -->
-                            <!-- start line 2 -->
-                            <ul class="partners__list partners__list--bottom">
-                                <li class="partners__item">
-                                    <a href="#" class="partners__link">
-                                        <img src="img/logotypes/oneair.png" alt="партнер One Air" class="partners__img">
-                                    </a>
-                                </li>
-                                <li class="partners__item">
-                                    <a href="#" class="partners__link">
-                                        <img src="img/logotypes/bingair.png" alt="партнер Bing Air" class="partners__img">
-                                    </a>
-                                </li>
-                                <li class="partners__item">
-                                    <a href="#" class="partners__link">
-                                        <img src="img/logotypes/ural.png" alt="партнер Урал" class="partners__img">
-                                    </a>
-                                </li>
-                            </ul>
-                            <!-- end line 2 -->
-                        </section>
-                        <!-- end partners -->
                     </main>
                     <!-- end maincontent__main -->
                 </div>
